HtmlUI: fixed different hights and alignements in tree and table for checkboxes

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/Table.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/Table.css
@@ -85,6 +85,7 @@
   padding: @table-row-padding-y 4px @table-row-padding-y @table-row-padding-left;
   .overflow-ellipsis-nowrap;
   mix-blend-mode: multiply; /* experimental support, currently only in FF */
+  vertical-align: middle;
 
   .table-row-sum & {
     font-weight: bold;
